# ai_backend

./: .gitignore  CONFIGURACION_PERSONAL.md  DIA_1_COMPLETADO.md  DIA_2_COMPLETADO.md  DIA_3_RESUMEN.md  INICIO_RAPIDO.md  PYCHARM_SETUP.md  README.md  RELEASE_v0.1.md  SEMANA_1_COMPLETA.md  SUBIR_A_GITHUB.md  pyproject.toml  requirements.txt  run_server.bat  start_server.py  test_columns.py  verify_day2.py
.github/workflows/: ci.yml
api/: deps.py  main.py
api/routes/: chat.py  pricing.py  stream.py
api/uploads/: resultado.csv
docker/: Dockerfile  docker-compose.yml
models/: schemas.py
services/: llm_service.py  mock_redis.py  pricing_optimizer.py  product_strategy.py  redis_manager.py  report_generator.py  tasks.py
tests/: test_chat_async.py  test_linear_demand.py  test_metrics.py  test_pricing.py  test_status.py  test_stream.py  test_upload.py
