[tool.poetry]
name = "aibackend"
version = "0.1.0"
description = "Sistema de Optimización de Precios con IA - API asíncrona con FastAPI y LangChain"
authors = [
    "Andrés Giraldo <andresgiraldo1988@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0,<1.0.0"}
redis = ">=5.0.0,<6.0.0"
langchain = ">=0.1.0,<1.0.0"
langchain-openai = ">=0.0.5,<1.0.0"
openai = ">=1.12.0,<2.0.0"
pydantic = ">=2.6.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
